<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FC League Scores</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="general">General</string>
    <string name="reset_database">Reset Database</string>
    <string name="about">About</string>

    <string name="reset_database_summary">Clear all data from local SQLite Database</string>
    <string name="prefTitle">Settings</string>
    <string name="loadingText">Loading...</string>

    <integer name="team_name_col">1</integer>
    <integer name="team_league_col">2</integer>
    <integer name="team_marketval_col">3</integer>
    <integer name="team_shortname_col">4</integer>
    <integer name="team_playersUrl_col">5</integer>
    <integer name="team_teamCode_col">6</integer>
    <integer name="team_imageUrl_col">7</integer>
    <string name="API_TOKEN">41205ee945bb4cffa494ff653019fdb3</string>

    <string name="teamName"><b>Team</b></string>
    <string name="Pos"><b>Pos</b></string>
    <string name="P"><b>GP</b></string>
    <string name="G"><b>GF</b></string>
    <string name="GA"><b>GA</b></string>
    <string name="GD"><b>GD</b></string>
    <string name="PTS"><b>PTS</b></string>



</resources>
